# hlock

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  SPEC-v0.13.md  demo.sh  fix_parse_header.py  v0.6.0.md
docs/plans/: v0.14.0.md  v0.18.0.md
docs/specs/: v0.1.0.md  v0.10.0.md  v0.11.0.md  v0.12.0.md  v0.13.0.md  v0.14.0.md  v0.15.0.md  v0.16.0.md  v0.17.0.md  v0.18.0.md  v0.2.0.md  v0.3.0.md  v0.4.0.md  v0.5.0.md  v0.6.0.md  v0.7.0.md  v0.8.0.md  v0.9.0.md
examples/: generate_demo.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_deserialize.rs  fuzz_unpack_payload.rs
src/: base64url.rs  cli.rs  config.rs  crc32.rs  error.rs  explain.rs  fix.rs  fnv.rs  graph.rs  import.rs  lazy.rs  lib.rs  lint.rs  lockfile.rs  lockfile.rs.orig  lockfile.rs.rej  main.rs  merge.rs  osv.rs  outdated.rs  output.rs  payload.rs  policy.rs  provenance.rs  sbom.rs  scorecard.rs  signature.rs  sigstore.rs  varint.rs
src/commands/: mod.rs
src/lockfile/: diff.rs  digest.rs  header.rs  mod.rs  types.rs
tests/: advisory_tests.rs  check_tests.rs  cli_tests.rs  color_tests.rs  completions_tests.rs  dedup_tests.rs  dependents_tests.rs  deps_tests.rs  info_tests.rs  integration.rs  license_tests.rs  licenses_cmd_tests.rs  lint_rule_tests.rs  mirror_tests.rs  policy_directive_tests.rs  sbom_license_tests.rs  stdin_tests.rs  tree_tests.rs  trust_root_tests.rs  why_tests.rs
