[package]
name = "hlock"
version = "0.17.0"
edition = "2024"

[dependencies]
thiserror = "2"
ed25519-dalek = "2.2"
blake3 = "1"
serde_json = "1"
fips204 = { version = "0.4", features = ["ml-dsa-65", "default-rng"] }
clap = { version = "4", features = ["derive"] }
owo-colors = { version = "4", features = ["supports-colors"] }
clap_complete = "4"

[[bin]]
name = "hlock"
path = "src/main.rs"

[lib]
name = "hlock"
path = "src/lib.rs"
